<resources>
    <string name="app_name">Browse</string>
    <string name="www_link">www.brief.ink</string>
    <string name="email_link">support@brief.ink</string>
    <string name="about_by">© BRIEF APP LTD, UK, 2014 onwards</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_paste">Paste</string>
    <string name="label_copy">Copy</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open_file">Open file</string>
    <string name="file_menu_options">File options</string>
    <string name="files_delete">Delete files</string>
    <string name="files_delete_now">Deleting files now</string>
    <string name="files_delete_completed">Delete completed</string>
    <string name="label_delete">Delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="file_invalid">Invalid file, not on storage</string>
    <string name="no_file_format">Cannot recognise file format</string>
    <string name="label_open">Open</string>
    <string name="label_remove">Remove</string>
    <string name="label_images">Image</string>
    <string name="label_edit">Edit</string>
    <string name="label_files">Browse</string>
    <string name="file_explore_empty">Empty</string>
    <string name="showhide_system_files">Show / Hide system files</string>
    <string name="file_explore_order_error">Too many files to be able to order</string>
    <string name="settings_tab1">Settings</string>
    <string name="settings_tab2">Help</string>
    <string name="settings_tab3">About</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_desc">Change the preferred colour style</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_head_visual">Theme</string>
    <string name="help_shortcuts">Navigation</string>
    <string name="help_shortcuts_desc">Use the 3 stripes menu button to open the navigation slider for options and quick shortcuts around the file system</string>
    <string name="help_fab">Action button</string>
    <string name="help_fab_desc">Browse up the folder tree using the back arrow</string>
    <string name="search_hint">type search keywords...</string>
    <string name="label_share">Share</string>
    <string name="label_about">About</string>
    <string name="about_version">version</string>

    <string name="about_send_to">Please send any tips, ideas, corrections to:</string>
    <string name="label_archive">Archive</string>
    <string name="label_rename">Rename</string>
    <string name="label_extract">Extract</string>
    <string name="label_help">Help</string>
    <string name="label_options">Options</string>
    <string name="label_loading">Loading</string>
    <string name="label_search">Search</string>
    <string name="search_start">Enter search terms above and click to search</string>
    <string name="search_searching">Searching</string>
    <string name="zip_duplicates">Duplicate filenames found, change output folder</string>
    <string name="no_sd_card_access">SD Card is locked for access, unlock to use app</string>
    <string name="action_use">Use</string>
    <string name="choose_folder">Choose Folder</string>
    <string name="nav_images">Images</string>
    <string name="nav_downloads">Downloads</string>
    <string name="nav_documents">Documents</string>
    <string name="nav_videos">Videos</string>
    <string name="nav_music">Music</string>
    <string name="label_paste_files">Duplicating files</string>
    <string name="label_move">Move</string>
    <string name="label_moving">Moving files</string>
    <string name="creating_archive">creating archive</string>

    <string name="useful_folders">Useful folders</string>
    <string name="text_files">Text files</string>
</resources>
