<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:clickable="true"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    >
    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />
    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />
    <TextView
        android:id="@+id/about_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_by"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/www_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/www_link"
        />
    <TextView

        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about_send_to"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        style="@style/text_small"
        />
    <TextView
        android:id="@+id/email_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_link"
        />
</LinearLayout>