<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:clickable="true"
    android:id="@+id/home_layout"

     >
     <LinearLayout 
         android:id="@+id/search_tools"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         >
	    <EditText
		    android:id="@+id/search_text"
		    android:layout_weight="0.50"
		    android:minWidth="200dp"
		    android:layout_width="0dp"
		    android:layout_height="50sp"
	        android:inputType="textMultiLine|textAutoCorrect"
			style="@style/FontSizeLarge"
	        >
	
	        <requestFocus />
	    </EditText>
        <run.brief.b.bButton 
           android:id="@+id/search_btn"
	       android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:drawableLeft="@drawable/action_search"
		   android:text="@string/label_search"
		   android:layout_marginRight="5dp"
           />
     </LinearLayout>
     <RelativeLayout 
	    android:id="@+id/search_start"
	    android:layout_width="match_parent"
	    android:layout_below="@id/search_tools"
	   	android:layout_height="wrap_content"
	   	android:visibility="gone"
	    >

	    <TextView 
		    android:text="@string/search_start"
		    style="@style/info_text"
		    />
	</RelativeLayout>
     <LinearLayout 
	    android:id="@+id/search_updating"
	    android:layout_width="match_parent"
	    android:layout_below="@id/search_tools"
	   	android:layout_height="wrap_content"
	   	android:orientation="vertical"
	   	android:visibility="gone"
	   	
	    >
		<ProgressBar
		    android:id="@+id/layout_search_progress_bar"
		    android:layout_width="30dp"
		    android:layout_height="30dp"
		    android:layout_gravity="center"
		     />
	    <TextView 
		    android:text="@string/search_searching"
		    style="@style/info_text"
		    android:layout_gravity="center"
		    android:paddingTop="5dp"
		    android:paddingBottom="5dp"
		    
		    />
	</LinearLayout>
	<ListView android:id="@+id/search_list"
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:layout_below="@id/search_updating"

        android:layout_margin="0dp"
        android:padding="0dp"
        android:divider="@null"
        android:dividerHeight="0dp"
	/>

</RelativeLayout>
