<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingBottom="50dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:orientation="vertical"
        android:layout_margin="0dp"

        android:clickable="true"
        android:isScrollContainer="true"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme"
            style="@style/text_title"
            android:paddingBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_theme_desc"
            style="@style/text_small"
            android:paddingBottom="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:id="@+id/settings_theme_dark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/theme_dark"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_dark"
                    style="@style/text_title"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/settings_theme_light"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/theme_light"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_theme_light"
                    style="@style/text_title"
                    android:layout_gravity="center_horizontal"
                    />
            </LinearLayout>
        </LinearLayout>
        <!--
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_paste"
            style="@style/text_title"
            android:paddingTop="30dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_paste_desc"
            style="@style/text_small"
            />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:padding="5dp"
                android:orientation="vertical"
                >
                <RadioButton android:id="@+id/settings_paste_rename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_paste_rename"
                    />
                <RadioButton android:id="@+id/settings_paste_overwrite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_paste_overwrite"
                    />

            </LinearLayout>
        </RadioGroup>
-->
    </LinearLayout>
</ScrollView>
